feat: reporte diario por rango de fechas, auth, turnos, sync histórico
- Reporte diario: soporte para búsqueda por rango de fechas (startDate/endDate)
- Auth: login, logout, refresh, middleware JWT
- Asignación de turnos: CRUD manual y masivo
- Departamentos: API aggregada multi-planta
- Scripts: debug y sync histórico
- Backup de archivos modificados en backup-rango-fechas/

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "multiplant",
   "version": "1.0.0",
   "private": true,
+  "author": "Humberto Alonso <humberto.alonso.gamez@gmail.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
